# Senti2Sound

./: .gitignore  Dockerfile  LSTM_music.py  MelodyRNN.py  Procfile  README.md  app.py  generated.mid  makefile  memo.txt  music_generator.py  nltk.txt  pos2.mid  pyproject.toml  requirements.txt  sentiment_analyzer.py  train_musicXML.py  vercel.json  進捗.txt
.devcontainer/: Dockerfile  devcontainer.json  pyproject.toml
musicxml/neutral/: Bolero__Maurice_Ravel.mxl
src/: app.py  music_generator.py  random_msg.py  sentiment_analyzer.py  train_musicXML.py
src/my_modules/: music_generator.py  sentiment_analyzer.py  train_musicXML.py
src/static/css/: style.css
src/templates/: about.html  index.html  layout.html  result.html
static/css/: style.css
templates/: index.html  layout.html  result.html
