[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
isort = "^5.10.1"
black = "^22.10.0"
pyproject-flake8 = "^5.0.4.post1"
pytest = "^7.2.0"
jupyterlab = "^3.5.0"
flask = "^3.0.2"
music21 = "^9.1.0"
tqdm = "^4.66.2"
nltk = "^3.8.1"
numpy = "^1.26.4"
tensorflow = "^2.16.1"
gunicorn = "^21.2.0"
memory-profiler = "^0.61.0"
psutil = "^5.9.8"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = "E203,"

[tool.pytest.ini_options]
testpaths = ["tests",]
